# waypp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu-latest.yml
cmake/: context.cmake  options.cmake  packaging.cmake  utils.cmake  wayland.cmake
demo/: CMakeLists.txt  demo.cc
src/: CMakeLists.txt
src/seat/: cursor.cc  cursor.h  keyboard.cc  keyboard.h  pointer.cc  pointer.h  seat.cc  seat.h  touch.cc  touch.h
src/window/: egl.cc  egl.h  window.cc  window.h  window_egl.cc  window_egl.h  window_vulkan.cc  window_vulkan.h
src/window_manager/: display.cc  display.h  output.cc  output.h  window_manager.cc  window_manager.h  xdg_wm.cc  xdg_wm.h
